<resources>
    <string name="app_name" translatable="false">BatterYells</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="allow_notification_request_text">Please allow notifications to start the service</string>
    <string name="battery_yells_slogun">when it is charged enough 😉</string>
    <string name="more">More</string>
    <string name="home">Home</string>
    <string name="info">Info</string>
    <string name="dialog_permission_request_caption">Please click \'Allow\' when the permission is asked for</string>
    <string name="ok">OK</string>
    <string name="turn_on_battery_yelling">Turn on battery yelling?</string>
    <string name="battery_charged_alarm">Battery charged alarm</string>
    <string name="ring_alarm_when_battery_reaches">Ring alarm when battery reaches:</string>
    <string name="battery_charged_guide">Battery will ring alarm when reached up to a specific percentage and is still charging.</string>
    <string name="battery_low_alarm">Battery low alarm</string>
    <string name="ring_alarm_when_battery_is_less_than">Ring alarm when battery is less than:</string>
    <string name="battery_low_guide">Battery will ring alarm when reached down to a specific percentage and is still not charging.</string>
    <string name="title_activity_dev" translatable="false">DevActivity</string>
    <string name="title_activity_battery_tips" translatable="false">BatteryTipsActivity</string>
</resources>