<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    tools:context=".fragments.FragmentBatterYell">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view_battery_service_switch_id"
        style="@style/Widget.Material3.CardView.Elevated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:padding="4dp">


        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/battery_service_switch_id"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:fontFamily="@font/signika"
            android:padding="16dp"
            android:text="@string/turn_on_battery_yelling"
            android:textSize="18sp" />

    </com.google.android.material.card.MaterialCardView>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/battery_service_enabled_extra_layout_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_view_battery_battery_charged_id"
                style="@style/Widget.Material3.CardView.Elevated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toTopOf="@id/card_view_battery_battery_low_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_view_battery_service_switch_id">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/battery_charged_alarm_textview_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/signika"
                            android:labelFor="@id/battery_charged_alarm_switch_id"
                            android:text="@string/battery_charged_alarm"
                            android:textSize="18sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/battery_charged_alarm_preference_save_loading_lottie_id"
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_marginStart="6dp"
                            android:visibility="gone"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/battery_charged_alarm_textview_id"
                            app:layout_constraintTop_toTopOf="parent"
                            app:lottie_autoPlay="true"
                            app:lottie_colorFilter="?colorPrimary"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/loading_drops_modified" />


                        <com.google.android.material.materialswitch.MaterialSwitch
                            android:id="@+id/battery_charged_alarm_switch_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                    <LinearLayout
                        android:id="@+id/battery_charged_alarm_extra_layout_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.slider.Slider
                            android:id="@+id/slider_charged_alarm_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:stepSize="5"
                            android:value="95"
                            android:valueFrom="80"
                            android:valueTo="100"
                            app:haloRadius="0dp"
                            app:labelBehavior="floating"
                            app:thumbColor="?colorOnPrimary"
                            app:trackHeight="32dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center">


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/signika"
                                android:text="@string/ring_alarm_when_battery_reaches" />

                            <TextView
                                android:id="@+id/charged_percentage_textview_id"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="12dp"
                                android:fontFamily="@font/signika"
                                android:text="95%"
                                android:textSize="17sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <com.google.android.material.card.MaterialCardView
                            style="@style/Widget.Material3.CardView.Filled"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="6dp">

                                <ImageView
                                    android:layout_width="12dp"
                                    android:layout_height="12dp"
                                    android:layout_marginTop="3dp"
                                    android:layout_marginEnd="6dp"
                                    android:src="@drawable/lightbulb_solid" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/open_sans"
                                    android:text="@string/battery_charged_guide"
                                    android:textSize="11sp"
                                    android:textStyle="italic" />
                            </LinearLayout>
                        </com.google.android.material.card.MaterialCardView>
                    </LinearLayout>


                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_view_battery_battery_low_id"
                style="@style/Widget.Material3.CardView.Elevated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_view_battery_battery_charged_id">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/battery_low_alarm_textview_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/signika"
                            android:labelFor="@+id/battery_low_alarm_switch_id"
                            android:text="@string/battery_low_alarm"
                            android:textSize="18sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/battery_low_alarm_preference_save_loading_lottie_id"
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_marginStart="6dp"
                            android:visibility="gone"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/battery_low_alarm_textview_id"
                            app:layout_constraintTop_toTopOf="parent"
                            app:lottie_autoPlay="true"
                            app:lottie_colorFilter="?colorPrimary"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/loading_drops_modified" />


                        <com.google.android.material.materialswitch.MaterialSwitch
                            android:id="@+id/battery_low_alarm_switch_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                    <LinearLayout
                        android:id="@+id/battery_low_alarm_extra_layout_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.slider.Slider
                            android:id="@+id/slider_low_alarm_id"
                            style="@style/Myslider"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:stepSize="5"
                            android:theme="@style/light_error_colors"
                            android:value="20"
                            android:valueFrom="10"
                            android:valueTo="30"
                            app:haloColor="?colorError"
                            app:haloRadius="0dp"
                            app:labelBehavior="floating"
                            app:thumbColor="?colorOnError"
                            app:tickColorActive="?colorErrorContainer"
                            app:tickColorInactive="?colorOnErrorContainer"
                            app:trackColorActive="?colorOnErrorContainer"
                            app:trackColorInactive="?colorErrorContainer"
                            app:trackHeight="32dp" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center">


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/signika"
                                android:text="@string/ring_alarm_when_battery_is_less_than" />

                            <TextView
                                android:id="@+id/low_percentage_textview_id"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="12dp"
                                android:fontFamily="@font/signika"
                                android:text="20%"
                                android:textSize="17sp"
                                android:textStyle="bold" />
                        </LinearLayout>


                        <com.google.android.material.card.MaterialCardView
                            style="@style/Widget.Material3.CardView.Filled"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="6dp">

                                <ImageView
                                    android:layout_width="12dp"
                                    android:layout_height="12dp"
                                    android:layout_marginTop="3dp"
                                    android:layout_marginEnd="6dp"
                                    android:src="@drawable/lightbulb_solid" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/open_sans"
                                    android:text="@string/battery_low_guide"
                                    android:textSize="11sp"
                                    android:textStyle="italic" />
                            </LinearLayout>
                        </com.google.android.material.card.MaterialCardView>

                    </LinearLayout>


                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>